Changelog
=========

1.1.2 (unreleased)
------------------

* User defined title is internationalized in plone domain.
  [thomasdesvenain]

* Remove !important in css, that shouldn't be used in base css.
  [thomasdesvenain]

* Portlet has a bottom left and bottom right.
  [thomasdesvenain]

* Javascripts and css are loaded for authenticated users only.
  Refs http://plone.org/products/collective.quickupload/issues/11.
  [frisi, thomasdesvenain]

* Fixed portlet field validation.
  [thomasdesvenain]

* Fixed internationalizations.
  Fixed .pot and .po files.
  [thomasdesvenain]

* Added try/finally around upload_lock protected code to ensure that the lock
  is released if an exception occurs.
  [swampmonkey]

* Added Spanish translation
  [hvelarde]


1.1.1 (2011-06-27)
------------------

* Notify ObjectInializedEvent at upload.
  Fixes http://plone.org/products/collective.quickupload/issues/7
  [thomasdesvenain, thanks to lars.eisbaer]

* Pass content_type to the ContentTypeRegistry
  Fixes http://plone.org/products/collective.quickupload/issues/13/
  [thomasw]

* Added Brazilian Portuguese translation
  [erico_andrei]

* Quickupload form allows to fill description for each uploaded file
  [regisrouet]


1.1.0 (2011-04-06)
------------------

* Mimetype detection works with blobs (plone 4.0+ files).
  [thomasdesvenain]

* Keep dots in filename during id normalization.
  [thomasdesvenain]

* Plone 4.1 compatibility.
  [vincentfretin]

1.0.3
-----

* let an empty content_type when mimetype_registry return None as mimetype
  object will result in "application/octet-stream"
  macadames 2010-09-29

* use a specific interface IQuickUploadFactory in place of IFileFactory
  to avoid possible conflicts with another products using the same interface
  http://plone.org/products/collective.quickupload/issues/4
  macadames and mroeder 2010-10-07

* files id consolidation
  macadames and mroeder 2010-10-07

* log some rare exceptions (bad id, no primary field ...)